- Added more wxTextCtrl- and wxTextAttr-related constants (Sean Long)
- Overhauled wxTextCtrl.h to match actual wx API (Sean Long)
- Fixed 'undefined method' error in bigdemo/wxTextCtrl (Kevin Smith)
- Renamed bigdemo from Main.rbw to bigdemo.rb (Kevin Smith)
- Removed strict dependency on redcloth to do main rake compile (Alex Fenton)
- Removed unneeded/problematic include dirs from mswin rakefile (Roy Sutton)
- Fixed TreeEvent to enable more methods (Alex Fenton)
- Fixed caret sample to not crash on certain keystrokes (Roy Sutton)
- Added comment to listbook sample that it doesn't work on Linux (Alex Fenton)
- Updated listbook sample menu id (Sean Long)
- Updated caret sample to modern coding conventions (Alex Fenton)
- Updated calendar sample to modern coding conventions (Alex Fenton)
- Bigdemo: Commented out unsupported ArtProvider methods and related 
  set_image calls (Alex Fenton)
- Added and updated doc tasks in rakefile and rake/rakedocs.rb (Alex Fenton)
- Fixed TreeCtrl class to #ifdef features not on MSW (Sean Long)
- Big fixes to TreeCtrl and added TreeItemId class (Sean Long)
- Fixed sash event handling to avoid crashes (Alex Fenton)
  (caused by an incorrect patch merge by Kevin)


====0.0.33 tag included all of this:===
- Tweak rakewx for better debug_mode handling (Alex Fenton
- Fixed internal get_ruby_object method to handle NULLs (Alex Fenton)
- Improved miniframe sample (Alex Fenton)
- Added support for overriding App#on_assert (Kevin Smith)
- Minor Rakefile updates, mostly Mac and MSWin (Sean Long)
- Added several missing methods in Window; changed others to better 
  match wx (Sean Long)
- Added Wx::default_coord, and minor cleanup of standard ids (Sean Long)
- Added globals: display_depth, display_size, get_display_size and 
  display_size_mm, get_display_size_mm (Sean Long)
- Added ScrollWinEvent class and sample (Alex Fenton and Joe Seeley)
- Exposed member variables in KeyEvent (Sean Long)